# Enju

./: .gitignore  .gitmodules  BACKEND_API_SOLUTION.md  BRIDGE_README.md  CROSS_CHAIN_BRIDGE_README.md  DEMO_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPMENT_GUIDE.md  ENHANCED_ARCHITECTURE.md  ENJU_COMPLETE_ARCHITECTURE.md  FEATURE_UPDATES.md  INTENT_SWAP_README.md  LICENSE  LOCAL_FORK_SETUP.md  MERMAID_ARCHITECTURE.md  NUL  SWAP_INTEGRATION_COMPLETE.md  TRON_INTEGRATION_README.md  debug-tron-transactions.js  deploy-eth-contracts.sh  deploy-near-contracts.sh  deploy-shasta.sh  deploy-tron-contracts.sh  deploy-tron.js  optimize-for-vps.sh  package.json  readme.md  recover-tron-to-eth.js  retry-bridge.js  send-eth-manual.sh  start-bridge.sh  start-mainnet-fork.sh  test-fusion-bridge.js  test-tron-connection.js  test-tron-send.js  test-tron-validation.js  tronbox.js
.claude/: settings.local.json
backend/: .env.example  nodemon.json  package-lock.json  package.json  readme.md
bridge-listener/: .env.example  README.md  debug-bridge.js  package.json  test-conversion.ts
contract/: readme.md
cron-events/: .env.example  .gitignore  README.md  package.json  start.sh
cross-chain/: .env.example  README.md  config.example.json  get-testnet-funds.md  package.json  tsconfig.json  waitForEscrowCreation.tmp
eth-contracts/: DEPLOY_1INCH.md  README.md
frontend/: .env.example  .env.test  ANVIL_NETWORK_SETUP.md  CORS_SOLUTIONS.md  Dockerfile  (+17 more)
near-contracts/fusion-htlc/: Cargo.toml  README.md  build.sh  deploy.sh
near-contracts/fusion-htlc/src/: lib.rs
near-contracts/htlc-near/: Cargo.toml  rust-toolchain.toml
near-contracts/htlc-near/src/: lib.rs
(+328 files in other folders)
