[package]
name = "fusion-htlc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.0.0", features = ["legacy"] }

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["legacy", "unit-testing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
borsh = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true