[package]
name = "htlc-near"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.1.0"
near-contract-standards = "5.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.0.0", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.release.build-override]
opt-level = 0

[profile.release.package."*"]
opt-level = 0